--- a/express/index.html
+++ b/express/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/express/style.css">
+    <link rel="stylesheet" href="express/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-md-2">
                         <div class="logo">
-                            <a href="/index.html">
+                            <a href="index.html">
                                 <img src="https://www.ubcab.mn/static/vectors/cab-logo.svg" alt="">
                             </a>
                         </div>
