--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="row">
                     <div class="col-md-2">
                         <div class="logo">
-                            <a href="/index.html">
+                            <a href="index.html">
                                 <img src="https://www.ubcab.mn/static/vectors/cab-logo.svg" alt="">
                             </a>
                         </div>
