--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
                                         <ul>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                                <li><a href="/buteegdehuun/index.html">share</a>
+                                                <li><a href="buteegdehuun/index.html">share</a>
                                                 <br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                                <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                                <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
-                                                <li><a href="/ubeats/index.html">UBeats</a><br>Хоол хүргэлтийн үйлчилгээ</li>
+                                                <li><a href="ubeats/index.html">UBeats</a><br>Хоол хүргэлтийн үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/express-symbol.svg" alt="">
-                                                <li><a href="/express/index.html">Express</a><br>хүргэлтийн үйлчилгээ</li>
+                                                <li><a href="express/index.html">Express</a><br>хүргэлтийн үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/rent-symbol.svg" alt="">
-                                                <li><a href="/rent/index.html">Rent</a><br>унаа түрээс</li>
+                                                <li><a href="rent/index.html">Rent</a><br>унаа түрээс</li>
                                             </div>
                                         </ul>
                                     </div>
