--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="/jolooch/index.html">Жолооч</a></li>
-                                <li><a href="/baiguullaga/index.html">Байгууллага</a></li>
+                                <li><a href="jolooch/index.html">Жолооч</a></li>
+                                <li><a href="baiguullaga/index.html">Байгууллага</a></li>
                             </ul>
                         </div>
                     </div>
