--- a/TAXI/taxi.html
+++ b/TAXI/taxi.html
@@ -38,12 +38,12 @@
                                         <ul>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                                <li><a href="/buteegdehuun/index.html">share</a>
+                                                <li><a href="buteegdehuun/index.html">share</a>
                                                 <br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                                <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                                <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
@@ -60,8 +60,8 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="/jolooch/index.html">Жолооч</a></li>
-                                <li><a href="/baiguullaga/index.html">Байгууллага</a></li>
+                                <li><a href="jolooch/index.html">Жолооч</a></li>
+                                <li><a href="baiguullaga/index.html">Байгууллага</a></li>
                             </ul>
                         </div>
                     </div>
