--- a/baiguullaga/index.html
+++ b/baiguullaga/index.html
@@ -35,12 +35,12 @@
                                     <ul>
                                         <div class="about">
                                             <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                            <li><a href="/buteegdehuun/index.html">share</a>
+                                            <li><a href="buteegdehuun/index.html">share</a>
                                             <br>такси үйлчилгээ</li>
                                         </div>
                                         <div class="about">
                                             <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                            <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                            <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                         </div>
                                         <div class="about">
                                             <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
@@ -56,7 +56,7 @@
                                         </div>
                                     </ul>
                                 </div></li>
-                                <li><a href="/jolooch/index.html">Жолооч</a></li>
+                                <li><a href="jolooch/index.html">Жолооч</a></li>
                                 <li><a href="#">Байгууллага</a></li>
                             </ul>
                         </div>
@@ -76,7 +76,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="back">
-                            <img src="/baiguullaga/img/Screenshot (28).png" alt="">
+                            <img src="baiguullaga/img/Screenshot (28).png" alt="">
                         </div>
                         <a href="#">
                            <div class="absolute">
