--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="/img/Screenshot (17).png" alt="">
+                        <img src="img/Screenshot (17).png" alt="">
                     </div>
                 </div>
             </div>
@@ -201,13 +201,13 @@
                 <div class="img">
                     <div class="row">
                         <div class="col-md-6">
-                            <a href="/TAXI/taxi.html">
-                            <img src="/img/Screenshot (21).png" alt="">
+                            <a href="TAXI/taxi.html">
+                            <img src="img/Screenshot (21).png" alt="">
                             </a>
                         </div>
                         <div class="col-md-6">
-                            <a href="/ubeats/index.html">
-                            <img src="/img/Screenshot (22).png" alt="">
+                            <a href="ubeats/index.html">
+                            <img src="img/Screenshot (22).png" alt="">
                             </a>
                         </div>
                     </div>
@@ -215,15 +215,15 @@
                         <div class="row">
                             <div class="col-md-8">
                                 <div class="image">
-                                <a href="/express/index.html">
-                                <img src="/img/Screenshot (23).png" alt="">
+                                <a href="express/index.html">
+                                <img src="img/Screenshot (23).png" alt="">
                                 </a>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="image-2">
-                                <a href="/rent/index.html">
-                                <img src="/img/Screenshot (24).png" alt="">
+                                <a href="rent/index.html">
+                                <img src="img/Screenshot (24).png" alt="">
                                 </div>
                                 </div>
                             </div>
