--- a/jolooch/index.html
+++ b/jolooch/index.html
@@ -40,12 +40,12 @@
                                         <ul>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                                <li><a href="/buteegdehuun/index.html">share</a>
+                                                <li><a href="buteegdehuun/index.html">share</a>
                                                 <br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                                <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                                <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
@@ -63,7 +63,7 @@
                                     </div>
                                 </li>
                                 <li><a href="#">Жолооч</a></li>
-                                <li><a href="/baiguullaga/index.html">Байгууллага</a></li>
+                                <li><a href="baiguullaga/index.html">Байгууллага</a></li>
                             </ul>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="img">
-                            <img src="/jolooch/img/Screenshot (26).png" alt="">
+                            <img src="jolooch/img/Screenshot (26).png" alt="">
                         </div>
                         <div class="btn">
                             <button type="button">Жолоочын апп татах</button>
