--- a/rent/index.html
+++ b/rent/index.html
@@ -37,20 +37,20 @@
                                         <ul>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                                <li><a href="/buteegdehuun/index.html">share</a>
+                                                <li><a href="buteegdehuun/index.html">share</a>
                                                 <br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                                <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                                <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
-                                                <li><a href="/ubeats/index.html">UBeats</a><br>Хоол хүргэлтийн үйлчилгээ</li>
+                                                <li><a href="ubeats/index.html">UBeats</a><br>Хоол хүргэлтийн үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/express-symbol.svg" alt="">
-                                                <li><a href="/express/index.html">Express</a><br>хүргэлтийн үйлчилгээ</li>
+                                                <li><a href="express/index.html">Express</a><br>хүргэлтийн үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/rent-symbol.svg" alt="">
@@ -59,8 +59,8 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="/jolooch/index.html">Жолооч</a></li>
-                                <li><a href="/baiguullaga/index.html">Байгууллага</a></li>
+                                <li><a href="jolooch/index.html">Жолооч</a></li>
+                                <li><a href="baiguullaga/index.html">Байгууллага</a></li>
                             </ul>
                         </div>
                     </div>
@@ -141,18 +141,18 @@
                 <div class="about">
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="/rent/img/Screenshot (33).png" alt="">
+                            <img src="rent/img/Screenshot (33).png" alt="">
                         </div>
                         <div class="col-md-6">
-                            <img src="/rent/img/Screenshot (33).png" alt="">
+                            <img src="rent/img/Screenshot (33).png" alt="">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="/rent/img/x.png" alt="">
+                            <img src="rent/img/x.png" alt="">
                         </div>
                         <div class="col-md-6">
-                            <img src="/rent/img/x.png" alt="">
+                            <img src="rent/img/x.png" alt="">
                         </div>
                     </div>
                 </div>
