--- a/express/index.html
+++ b/express/index.html
@@ -36,16 +36,16 @@
                                         <ul>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                                <li><a href="/buteegdehuun/index.html">share</a>
+                                                <li><a href="buteegdehuun/index.html">share</a>
                                                 <br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                                <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                                <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
-                                                <li><a href="/ubeats/index.html">UBeats</a><br>такси үйлчилгээ</li>
+                                                <li><a href="ubeats/index.html">UBeats</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/express-symbol.svg" alt="">
@@ -58,8 +58,8 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="/jolooch/index.html">Жолооч</a></li>
-                                <li><a href="/baiguullaga/index.html">Байгууллага</a></li>
+                                <li><a href="jolooch/index.html">Жолооч</a></li>
+                                <li><a href="baiguullaga/index.html">Байгууллага</a></li>
                             </ul>
                         </div>
                     </div>
