--- a/ubeats/index.html
+++ b/ubeats/index.html
@@ -37,16 +37,16 @@
                                         <ul>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/share-symbol.svg" alt="">
-                                                <li><a href="/buteegdehuun/index.html">share</a>
+                                                <li><a href="buteegdehuun/index.html">share</a>
                                                 <br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/cab-symbol.svg" alt="">
-                                                <li><a href="/TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
+                                                <li><a href="TAXI/taxi.html">UBcab</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/eats-symbol.svg" alt="">
-                                                <li><a href="/ubeats/index.html">UBeats</a><br>такси үйлчилгээ</li>
+                                                <li><a href="ubeats/index.html">UBeats</a><br>такси үйлчилгээ</li>
                                             </div>
                                             <div class="about">
                                                 <img src="https://www.ubcab.mn/static/vectors/express-symbol.svg" alt="">
@@ -59,8 +59,8 @@
                                         </ul>
                                     </div>
                                 </li>
-                                <li><a href="/jolooch/index.html">Жолооч</a></li>
-                                <li><a href="/baiguullaga/index.html">Байгууллага</a></li>
+                                <li><a href="jolooch/index.html">Жолооч</a></li>
+                                <li><a href="baiguullaga/index.html">Байгууллага</a></li>
                             </ul>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
             <div class="content-a">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="/ubeats/hard.png" alt="">
+                        <img src="ubeats/hard.png" alt="">
                     </div>
                 </div>
             </div>
